[package]
name = "archivo_javi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
polars = { version= "0.26.1", features=["docs", "csv-file", "temporal", "fmt", "dtype-slim", "polars-io", "docs-selection", "dtype-full", "performant", "serde-lazy", "parquet", "lazy", "private", "ipc", "mode", "object", "polars-lazy"]}
csv = "1.1.6"